force-app/main/default/objects/custom_create360__c/custom_create360__c.object-meta.xml
<CustomObject>
    <label>Custom created object360</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects360</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>