force-app/main/default/objects/custom_create360__c/fields/custom_create_360field683__c.field-meta.xml
<CustomField>
    <fullName>custom_create_360field683__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 360field683</label>
    <type>Checkbox</type>
</CustomField>